--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <title>React App</title>
+    <title>Sunnyside Agency</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
